# grooveguessr

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml  release.yml
backend/: .env.dist  Cargo.toml
backend/migrations/2024-01-05-084541_users/: up.sql
backend/migrations/2024-01-05-093726_lobbies/: down.sql  up.sql
backend/migrations/2024-01-07-184548_contents/: down.sql  up.sql
backend/migrations/2024-01-08-204149_lobbies_players/: down.sql  up.sql
backend/public/: index.html
backend/src/: auth.rs  auth_middleware.rs  db_schema.rs  lib.rs  main.rs  youtube.rs
backend/src/handler/: graphql_handler.rs  mod.rs
backend/src/models/: content.rs  lobby.rs  mod.rs  user.rs
backend/src/schemas/: lobby.rs
backend/src/services/: content.rs  contents.rs  lobby.rs  mod.rs  presence.rs  user.rs
frontend/: craco.config.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  Layout.tsx  index.css  index.tsx  queries.ts  theme.ts  useTimer.tsx  utils.ts
frontend/src/components/: ContentChooser.tsx  ElevatedPaper.tsx  GameLoop.tsx  GuessingTimeSlider.tsx  IsLoading.tsx  Lobby.tsx  Players.tsx  UserAvatar.tsx
frontend/src/model/: Content.ts  Lobby.ts  Player.ts
frontend/src/pages/: ErrorBoundary.tsx  Game.tsx  Home.tsx  Lobby.tsx
