[package]
name = "grooveguessr-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
async-graphql = { version = "5.0.7", features = ["chrono", "uuid", "log"] }
async-graphql-actix-web = "5.0.7"
serde = { version = "1.0.196", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid"] }
openidconnect = { version = "~3.5.0", features = ["accept-rfc3339-timestamps"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
chrono = { version = "0.4.24", features = ["serde"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
env_logger = "0.10.0"
log = "0.4.17"
futures-util = "0.3.28"
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
rand = "0.8.5"
r2d2 = "0.8.10"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
redis = "0.24.0"
